Get tests passing on Java 8 and Java 9+